WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274206
AVVideoCaptureSource is slower due to resolution reconfiguration happening when session is running
https://bugs.webkit.org/show_bug.cgi?id=274206
Summary
AVVideoCaptureSource is slower due to resolution reconfiguration happening wh...
youenn fablet
Reported
2024-05-15 01:34:51 PDT
<
rdar://128113983
>
Attachments
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2024-05-15 01:40:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28589
EWS
Comment 2
2024-05-16 00:58:44 PDT
Committed
278853@main
(87d9f26a3a2e): <
https://commits.webkit.org/278853@main
> Reviewed commits have been landed. Closing PR #28589 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug