AVVideoCaptureSource is slower due to resolution reconfiguration happening when session is running https://bugs.webkit.org/show_bug.cgi?id=274206 rdar://128113983

Reviewed by Eric Carlson.

Before https://commits.webkit.org/276773@main, we were configuring the session before running it.
This caused issues with torch, so we decided to configure once the session was running.
This is triggering a perf issue as configuring the resolution takes time, 0.5 seconds on macOS.
To go back to a good start time, we partially revert https://commits.webkit.org/276773@main,
by configuring the resolution and frame rate before starting the session.
We continue to configure once the session is running for torch and white balance.

Manually tested.

* Source/WebCore/platform/mediastream/mac/AVVideoCaptureSource.h:
* Source/WebCore/platform/mediastream/mac/AVVideoCaptureSource.mm:
(WebCore::AVVideoCaptureSource::setSessionSizeFrameRateAndZoom):
(WebCore::AVVideoCaptureSource::reconfigureIfNeeded):

Canonical link: https://commits.webkit.org/278853@main